--- a/drupal/people-bio/sass/3.components/_node--people-bio--teaser.scss
+++ b/drupal/people-bio/sass/3.components/_node--people-bio--teaser.scss
@@ -20,7 +20,7 @@
         transform: translate3d(0, -18px, 0);
 
         > img {
-          border: 2px solid $color--orange;
+          border: 2px solid $orange;
         }
   
         &:after {
@@ -31,18 +31,16 @@
     }
   }
 
-
   .person__image {
     position: relative;
     transform: translate3d(0, 0, 0);
     transition: transform 0.3s ease-out;
 
     > img {
-      @include fluid-image-full();
+      // @include fluid-image-full();
       border-radius: 100%;
       border: 2px solid transparent;
     }
-
 
     &:after {
       content: '';
@@ -53,12 +51,12 @@
       width: 40px;
       height: 40px;
       border-radius: 100%;
-      background-color: $color--orange;
-      background-image: url('/themes/aba/img/icons/arrow-right.svg');
+      background-color: $orange;
+      background-image: url();
       background-position: center center;
       background-size: 16px;
       background-repeat: no-repeat;
-      color: $color--white;
+      color: $white;
       opacity: 0;
       transform: scale3d(0.1, 0.1, 0.1);
       transition: 
@@ -67,12 +65,10 @@
     }
   }
 
-
   .person__heading {
     font-weight: 600;
     font-size: 1.375rem;
     line-height: 1.2272;
-    font-family: $font--josefin;
     letter-spacing: -0.55px;
     text-transform: inherit;
     margin-top: 1.25rem;
@@ -80,15 +76,13 @@
     text-align: center;
   }
 
-
   .person__occupation {
     font-weight: 700;
     font-size: 0.75rem;
     line-height: 1.3333;
     letter-spacing: 0.6px;
-    font-family: $font--josefin;
     text-transform: uppercase;
-    color: $color--navy-muted;
+    color: $black;
     max-width: 200px;
     text-align: center;
   }
